--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.5.1",
     "framer-motion": "^10.16.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
